<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.productslist.ProductsListFragment">

    <LinearLayout
        android:id="@+id/ll_filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_apply_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/apply_filter"
            style="@style/MediumTextBlack"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="12dp"
            app:drawableStartCompat="@drawable/ic_baseline_filter_alt_24" />
        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/logout"
            style="@style/MediumTextBlack"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="12dp"
            app:drawableStartCompat="@drawable/ic_baseline_logout_24" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_categories"
        android:layout_width="70dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_filter_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_cart_layout"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_item_category"
            tools:itemCount="6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_products"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_filter_layout"
        app:layout_constraintStart_toEndOf="@id/cl_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_cart_layout"
        tools:listitem="@layout/row_item_product"
        tools:itemCount="10"
        android:background="@color/lightGreyColor"/>

    <TextView
        android:id="@+id/tv_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_pink_stroke"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:paddingVertical="6dp"
        android:text="@string/retry"
        android:textColor="@color/pink"
        app:layout_constraintTop_toBottomOf="@id/ll_filter_layout"
        app:layout_constraintStart_toEndOf="@id/cl_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_cart_layout"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cart_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:padding="12dp"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp"
            app:cardBackgroundColor="@color/orange"
            style="@style/CardViewStyle">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp">
                <TextView
                    android:id="@+id/tv_total_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/MediumText"
                    android:textColor="@color/white"
                    tools:text="1 item | "
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_total_items"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/MediumText"
                    android:textColor="@color/white"
                    tools:text="654"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/MediumText"
                    android:textColor="@color/white"
                    android:text="@string/view_cart"
                    android:drawablePadding="6dp"
                    android:layout_gravity="end"
                    app:drawableStartCompat="@drawable/ic_baseline_shopping_bag_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>